Fixed release build (proguard issue)
Added GSON classes to proguard file
fixed layout
added scroll view to infoTab

--- a/code/Android/app/src/main/res/layout/info.xml
+++ b/code/Android/app/src/main/res/layout/info.xml
@@ -2,204 +2,291 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MyActivity$PlaceholderFragment">
 
-    <LinearLayout
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Tracker State: "/>
-            <TextView
-                android:id="@+id/textTrackerState"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
+        android:layout_height="fill_parent">
 
         <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Tracker Status: "/>
-            <TextView
-                android:id="@+id/textTrackerError"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Dual Axis: "/>
-            <TextView
-                android:id="@+id/textDualAxis"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
+            <LinearLayout style="@style/InfoLayout">
 
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Latitude: "/>
-            <TextView
-                android:id="@+id/textLatitude"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="Tracker State: " />
 
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Longitude: "/>
-            <TextView
-                android:id="@+id/textLongitude"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/textTrackerState"
+                    style="@style/InfoValue"
+                    android:text="-" />
+            </LinearLayout>
 
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Date/Time: "/>
-            <TextView
-                android:id="@+id/textDateTime"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="UTC offset: "/>
-            <TextView
-                android:id="@+id/textUtcOffset"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
+            <LinearLayout style="@style/InfoLayout">
 
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Horizontal Actuator Position: "/>
-            <TextView
-                android:id="@+id/textHorizontalActuatorPosition"
-                style="@style/InfoValue"
-                android:text="-"/>
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="Tracker Status: " />
+
+                <TextView
+                    android:id="@+id/textTrackerError"
+                    style="@style/InfoValue"
+                    android:text="-" />
+            </LinearLayout>
+
+            <LinearLayout style="@style/InfoLayout">
+
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="Dual Axis: " />
+
+                <TextView
+                    android:id="@+id/textDualAxis"
+                    style="@style/InfoValue"
+                    android:text="-" />
+            </LinearLayout>
+
+            <LinearLayout style="@style/InfoLayout">
+
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="Latitude: " />
+
+                <TextView
+                    android:id="@+id/textLatitude"
+                    style="@style/InfoValue"
+                    android:text="-" />
+            </LinearLayout>
+
+            <LinearLayout style="@style/InfoLayout">
+
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="Longitude: " />
+
+                <TextView
+                    android:id="@+id/textLongitude"
+                    style="@style/InfoValue"
+                    android:text="-" />
+            </LinearLayout>
+
+            <LinearLayout style="@style/InfoLayout">
+
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="Date/Time: " />
+
+                <TextView
+                    android:id="@+id/textDateTime"
+                    style="@style/InfoValue"
+                    android:text="10 08, 2015 08:07PM" />
+            </LinearLayout>
+
+            <LinearLayout style="@style/InfoLayout">
+
+                <TextView
+                    style="@style/InfoLabel"
+                    android:text="UTC offset: " />
+
+                <TextView
+                    android:id="@+id/textUtcOffset"
+                    style="@style/InfoValue"
+                    android:text="-" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/GroupLabel"
+                    android:text="Actuator Position" />
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="Horizontal: " />
+
+                    <TextView
+                        android:id="@+id/textHorizontalActuatorPosition"
+                        style="@style/InfoValue"
+                        android:text="9999.99" />
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="Vertical: " />
+
+                    <TextView
+                        android:id="@+id/textVerticalActuatorPosition"
+                        style="@style/InfoValue"
+                        android:text="-" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/GroupLabel"
+                    android:text="Panels" />
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="Azimuth: " />
+
+                    <TextView
+                        android:id="@+id/textArrayAzimuth"
+                        style="@style/InfoValue"
+                        android:text="-" />
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="Elevation: " />
+
+                    <TextView
+                        android:id="@+id/textArrayElevation"
+                        style="@style/InfoValue"
+                        android:text="-" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
+                    <TextView
+                        style="@style/GroupLabel"
+                        android:text="Sun" />
+
+                    <LinearLayout
+                        style="@style/InfoLayout"
+                        android:paddingLeft="15dp">
+
+                        <TextView
+                            style="@style/InfoLabel"
+                            android:text="Azimuth: " />
+
+                        <TextView
+                            android:id="@+id/textSunAzimuth"
+                            style="@style/InfoValue"
+                            android:text="-" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="Elevation: " />
+
+                    <TextView
+                        android:id="@+id/textSunElevation"
+                        style="@style/InfoValue"
+                        android:text="-" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/GroupLabel"
+                    android:text="Limits" />
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="East Azimuth: " />
+
+                    <TextView
+                        android:id="@+id/textMinAzimuth"
+                        style="@style/InfoValue"
+                        android:text="-" />
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="West Azimuth: " />
+
+                    <TextView
+                        android:id="@+id/textMaxAzimuth"
+                        style="@style/InfoValue"
+                        android:text="-" />
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="Mininimum Elevation: " />
+
+                    <TextView
+                        android:id="@+id/textMinElevation"
+                        style="@style/InfoValue"
+                        android:text="-" />
+                </LinearLayout>
+
+                <LinearLayout
+                    style="@style/InfoLayout"
+                    android:paddingLeft="15dp">
+
+                    <TextView
+                        style="@style/InfoLabel"
+                        android:text="Maximum Elevation: " />
+
+                    <TextView
+                        android:id="@+id/textMaxElevation"
+                        style="@style/InfoValue"
+                        android:text="-" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Vertical Actuator Position: "/>
-            <TextView
-                android:id="@+id/textVerticalActuatorPosition"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="ArrayAzimuth: "/>
-            <TextView
-                android:id="@+id/textArrayAzimuth"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="ArrayElevation: "/>
-            <TextView
-                android:id="@+id/textArrayElevation"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Sun Azimuth: "/>
-            <TextView
-                android:id="@+id/textSunAzimuth"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Sun Elevation: "/>
-            <TextView
-                android:id="@+id/textSunElevation"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="East Azimuth: "/>
-            <TextView
-                android:id="@+id/textMinAzimuth"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="West Azimuth: "/>
-            <TextView
-                android:id="@+id/textMaxAzimuth"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Mininimum Elevation: "/>
-            <TextView
-                android:id="@+id/textMinElevation"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-        <LinearLayout
-            style="@style/InfoLayout">
-            <TextView
-                style="@style/InfoLabel"
-                android:text="Maximum Elevation: "/>
-            <TextView
-                android:id="@+id/textMaxElevation"
-                style="@style/InfoValue"
-                android:text="-"/>
-        </LinearLayout>
-
-
-    </LinearLayout>
-
+    </ScrollView>
 
 </FrameLayout>
